# rust_cpx_accel_rx_tx

./: Cargo.toml  README.md  socat_setup.sh
firmware/: Cargo.toml
firmware/src/: main.rs
plotting_app/: Cargo.toml
plotting_app/src/: app.rs  main.rs  serial.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/messages/: acc_msg.rs  message.rs  message_id.rs  mod.rs
