[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
panic-halt = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
circuit_playground_express = {version = "0.12.1", features = ["default","rtic", "usb"]}
rtic = { version = "2.1.1", features = ["thumbv6-backend"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
postcard = {version = "1.1.3", default-features = false, features = ["heapless", "use-crc"]}
crc = "3.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
shared = { path = "../shared", default-features = false }
lis3dh = "0.4.4"
heapless = "0.9.3"
