[package]
name = "plotting_app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
postcard = {version = "1.1.3", default-features = false, features = ["alloc", "heapless", "use-crc"]}
crc = "3.4.0"
serialport = "4.9.0"
serde_repr = "0.1.20"
num-traits = "0.2.19"
cobs = "0.5.1"
eframe = "0.34.3"
egui_plot = "0.35.0"
env_logger = "0.11.10"
shared = {path = "../shared"}
